--- a/index.html
+++ b/index.html
@@ -1,7 +1,59 @@
 <!DOCTYPE html>
-<html>
-<body>
-<h1>Hello World</h1>
-<p>I'm hosted with GitHub Pages.</p>
-</body>
+<html lang="en">
+  <head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Mimung | Linktree</title>
+    <!-- Favicon -->
+    <link rel="icon" href="https://0.gravatar.com/avatar/3bc3b8bbdace1637947a22a7244ad223" type="image/x-icon" />
+    <!-- Font Awesome icons -->
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.1/css/all.css">
+    <!-- Core theme CSS -->
+    <link rel="stylesheet" href="style.css">
+  </head>
+
+  <body>
+    <!-- Parallax Pixel Background Animation -->
+    <section class="animated-background">
+      <div id="stars1"></div>
+      <div id="stars2"></div>
+      <div id="stars3"></div>
+    </section>
+    <!-- End of Parallax Pixel Background Animation -->
+
+    <a id="profilePicture" href="#popup">
+      <img src="https://0.gravatar.com/avatar/3bc3b8bbdace1637947a22a7244ad223" alt="Profile Picture">
+    </a>
+
+    <div class="overlay" id="popup">
+      <div class="popup">
+        <div class="popup-photo">
+          <a href="https://0.gravatar.com/avatar/3bc3b8bbdace1637947a22a7244ad223" target="_blank">
+            <img src="https://0.gravatar.com/avatar/3bc3b8bbdace1637947a22a7244ad223" alt="Profile Picture">
+          </a>
+        </div>
+        <div class="popup-quote">
+          🤠
+        </div>
+        <a class="popup-close" onclick="history.back()">&times;</a>
+      </div>
+    </div>
+
+    <div id="userName">
+      @Mimung
+    </div>
+
+    <div id="links">
+      <a class="link" href="https://github.com/pkrakmo" target="_blank">
+        <i class="fab fa-github">&nbsp;</i>Github
+      </a>
+      <a class="link" href="https://anilist.co/user/Mimung" target="_blank">
+        <i class="fa fa-play-circle">&nbsp;</i>AniList
+      </a>
+    </div>
+
+    <div id="hashtag">
+      🤠
+    </div>
+  </body>
 </html>
