--- a/index.html
+++ b/index.html
@@ -44,10 +44,10 @@
     </div>
 
     <div id="links">
-      <a class="link" href="https://github.com/pkrakmo" target="_blank">
+      <a id="github" class="link" href="https://github.com/pkrakmo" target="_blank">
         <i class="fab fa-github">&nbsp;</i>Github
       </a>
-      <a class="link" href="https://anilist.co/user/Mimung" target="_blank">
+      <a id="anilist" class="link" href="https://anilist.co/user/Mimung" target="_blank">
         <i class="fa fa-play-circle">&nbsp;</i>AniList
       </a>
     </div>
