--- a/index.html
+++ b/index.html
@@ -1,59 +1,102 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Mimung | Linktree</title>
-    <!-- Favicon -->
-    <link rel="icon" href="https://0.gravatar.com/avatar/3bc3b8bbdace1637947a22a7244ad223" type="image/x-icon" />
-    <!-- Font Awesome icons -->
-    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.1/css/all.css">
-    <!-- Core theme CSS -->
-    <link rel="stylesheet" href="style.css">
-  </head>
 
-  <body>
-    <!-- Parallax Pixel Background Animation -->
-    <section class="animated-background">
-      <div id="stars1"></div>
-      <div id="stars2"></div>
-      <div id="stars3"></div>
-    </section>
-    <!-- End of Parallax Pixel Background Animation -->
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Mimung | Linktree</title>
+  <!-- Favicon -->
+  <link rel="icon" href="https://0.gravatar.com/avatar/3bc3b8bbdace1637947a22a7244ad223" type="image/x-icon" />
+  <!-- Font Awesome icons -->
+  <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.1/css/all.css">
+  <!-- Core theme CSS -->
+  <link rel="stylesheet" href="style.css">
 
-    <a id="profilePicture" href="#popup">
-      <img src="https://0.gravatar.com/avatar/3bc3b8bbdace1637947a22a7244ad223" alt="Profile Picture">
-    </a>
+</head>
 
-    <div class="overlay" id="popup">
-      <div class="popup">
-        <div class="popup-photo">
-          <a href="https://0.gravatar.com/avatar/3bc3b8bbdace1637947a22a7244ad223" target="_blank">
-            <img src="https://0.gravatar.com/avatar/3bc3b8bbdace1637947a22a7244ad223" alt="Profile Picture">
-          </a>
-        </div>
-        <div class="popup-quote">
-          🤠
-        </div>
-        <a class="popup-close" onclick="history.back()">&times;</a>
+<body>
+  <!-- Parallax Pixel Background Animation -->
+  <section class="animated-background">
+    <div id="stars1"></div>
+    <div id="stars2"></div>
+    <div id="stars3"></div>
+  </section>
+  <!-- End of Parallax Pixel Background Animation -->
+
+  <a id="profilePicture" href="#popup">
+    <img src="https://0.gravatar.com/avatar/3bc3b8bbdace1637947a22a7244ad223" alt="Profile Picture">
+  </a>
+
+  <div class="overlay" id="popup">
+    <div class="popup">
+      <div class="popup-photo">
+        <a href="https://0.gravatar.com/avatar/3bc3b8bbdace1637947a22a7244ad223" target="_blank">
+          <img src="https://0.gravatar.com/avatar/3bc3b8bbdace1637947a22a7244ad223" alt="Profile Picture">
+        </a>
       </div>
+      <div class="popup-quote">
+        🤠
+      </div>
+      <a class="popup-close" onclick="history.back()">&times;</a>
     </div>
+  </div>
 
-    <div id="userName">
-      @Mimung
-    </div>
+  <div id="userName">
+    @Mimung
+  </div>
 
-    <div id="links">
-      <a id="githu" class="link" href="https://github.com/pkrakmo" target="_blank">
-        <i class="fab fa-github">&nbsp;</i>Github
-      </a>
-      <a id="anilist" class="link" href="https://anilist.co/user/Mimung" target="_blank">
-        <i class="fa fa-play-circle">&nbsp;</i>AniList
-      </a>
-    </div>
+  <div id="links">
+    <a id="githu" class="link" href="https://github.com/pkrakmo" target="_blank">
+      <i class="fab fa-github">&nbsp;</i>Github
+    </a>
+    <a id="anilist" class="link" href="https://anilist.co/user/Mimung" target="_blank">
+      <i class="fa fa-play-circle">&nbsp;</i>AniList
+    </a>
+  </div>
 
-    <div id="hashtag">
-      🤠
-    </div>
-  </body>
+  <script>
+    
+    const stars1 = []
+    const stars2 = []
+    const stars3 = []
+
+    const numberOfStars1 = '1000'
+    const numberOfStars2 = '600'
+    const numberOfStars3 = '100'
+
+
+    for (let i = 0; i < numberOfStars1; i++) {
+      const pos1 = (Math.floor(Math.random() * 5200))
+      const pos2 = (Math.floor(Math.random() * 5200))
+      stars1.push(`${pos1}px ${pos2}px #fff`)
+    }
+
+    for (let i = 0; i < numberOfStars2; i++) {
+      const pos1 = (Math.floor(Math.random() * 5200))
+      const pos2 = (Math.floor(Math.random() * 5200))
+      stars2.push(`${pos1}px ${pos2}px #fff`)
+    }
+
+    for (let i = 0; i < numberOfStars3; i++) {
+      const pos1 = (Math.floor(Math.random() * 5200))
+      const pos2 = (Math.floor(Math.random() * 5200))
+      stars3.push(`${pos1}px ${pos2}px #fff`)
+    }
+
+    const addCSS = css => document.head.appendChild(document.createElement("style")).innerHTML = css;
+
+    addCSS(`#stars1{ box-shadow:${stars1}}`)
+    addCSS(`#stars1:after{ box-shadow:${stars1}}`)
+
+    addCSS(`#stars2{ box-shadow:${stars2}}`)
+    addCSS(`#stars2:after{ box-shadow:${stars2}}`)
+
+    addCSS(`#stars3{ box-shadow:${stars3}}`)
+    addCSS(`#stars3:after{ box-shadow:${stars3}}`)
+
+  </script>
+
+
+</body>
+
 </html>
