fixed id typo on button

--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
   </div>
 
   <div id="links">
-    <a id="githu" class="link" href="https://github.com/pkrakmo" target="_blank">
+    <a id="github" class="link" href="https://github.com/pkrakmo" target="_blank">
       <i class="fab fa-github">&nbsp;</i>Github
     </a>
     <a id="anilist" class="link" href="https://anilist.co/user/Mimung" target="_blank">
